# ai-brooks-etf-trading

./: CODEBUDDY.md  Cargo.toml  LICENSE  README.md
config/: default.toml
crates/app/: Cargo.toml
crates/app/src/: cli.rs  main.rs
crates/app/src/commands/: analyze.rs  backtest.rs  config_cmd.rs  fetch_data.rs  mod.rs  paper.rs
crates/backtester/: Cargo.toml
crates/backtester/src/: config.rs  engine.rs  error.rs  fill_model.rs  lib.rs  metrics.rs  order_book.rs  portfolio.rs  trade_log.rs
crates/china-market/: Cargo.toml
crates/china-market/src/: calendar.rs  lib.rs  rules.rs  security_info.rs  session.rs
crates/core/: Cargo.toml
crates/core/src/: bar.rs  error.rs  event.rs  lib.rs  market.rs  order.rs  position.rs  price.rs  signal.rs  timeframe.rs
crates/http-api/: Cargo.toml
crates/http-api/src/: app.rs  dto.rs  error.rs  lib.rs  session.rs  state.rs
crates/http-api/src/handlers/: analysis.rs  backtest.rs  config.rs  data.rs  health.rs  mod.rs  trading.rs
crates/market-data/: Cargo.toml
crates/market-data/examples/: fetch_klines.rs
crates/market-data/src/: aggregator.rs  config.rs  error.rs  feed.rs  lib.rs  provider.rs  traits.rs
crates/market-data/src/futu/: client.rs  connection.rs  messages.rs  mod.rs  protocol.rs
crates/order-manager/: Cargo.toml
crates/order-manager/src/: error.rs  executor.rs  futu.rs  lib.rs  manager.rs  paper.rs
crates/pa-engine/: Cargo.toml
crates/pa-engine/src/: analyzer.rs  bar_analysis.rs  bar_counting.rs  breakout.rs  channel.rs  context.rs  entry_bar.rs  lib.rs  pattern.rs  signal_bar.rs  support_resistance.rs  trading_range.rs  trend.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: brooks.rs  config.rs  error.rs  lib.rs  mtf.rs  position_manager.rs  risk.rs  session_filter.rs  signal_generator.rs  stop_target.rs  traits.rs
data/: test_510050_5min.csv
docs/: user-guide.md
