[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/pa-engine",
    "crates/market-data",
    "crates/strategy",
    "crates/order-manager",
    "crates/backtester",
    "crates/china-market",
    "crates/http-api",
    "crates/app",
]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Protobuf
prost = "0.13"
prost-types = "0.13"
# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
# Decimal arithmetic (critical for financial data)
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Config
config = "0.14"
# Crypto
sha1 = "0.10"
# Error handling
thiserror = "2"
anyhow = "1"
# UUID
uuid = { version = "1", features = ["v4", "serde"] }
# Async trait
async-trait = "0.1"
# CLI
clap = { version = "4", features = ["derive"] }
# HTTP / Web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
# Testing
approx = "0.5"

# Internal crates
brooks-core = { path = "crates/core" }
brooks-pa-engine = { path = "crates/pa-engine" }
brooks-market-data = { path = "crates/market-data" }
brooks-strategy = { path = "crates/strategy" }
brooks-order-manager = { path = "crates/order-manager" }
brooks-backtester = { path = "crates/backtester" }
brooks-china-market = { path = "crates/china-market" }
brooks-http-api = { path = "crates/http-api" }
