[package]
name = "brooks-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brooks-trader"
path = "src/main.rs"

[dependencies]
brooks-core = { workspace = true }
brooks-pa-engine = { workspace = true }
brooks-strategy = { workspace = true }
brooks-market-data = { workspace = true }
brooks-order-manager = { workspace = true }
brooks-backtester = { workspace = true }
brooks-china-market = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
