[package]
name = "brooks-backtester"
version = "0.1.0"
edition = "2021"

[dependencies]
brooks-core = { workspace = true }
brooks-pa-engine = { workspace = true }
brooks-strategy = { workspace = true }
brooks-order-manager = { workspace = true }
brooks-china-market = { workspace = true }
brooks-market-data = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rust_decimal_macros = { workspace = true }
toml = { workspace = true }
