[package]
name = "brooks-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
