[package]
name = "brooks-http-api"
version = "0.1.0"
edition = "2021"

[dependencies]
brooks-core = { workspace = true }
brooks-pa-engine = { workspace = true }
brooks-strategy = { workspace = true }
brooks-market-data = { workspace = true }
brooks-order-manager = { workspace = true }
brooks-backtester = { workspace = true }
brooks-china-market = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
