[package]
name = "brooks-order-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
brooks-core = { workspace = true }
brooks-china-market = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rust_decimal_macros = { workspace = true }
