[package]
name = "brooks-pa-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
brooks-core = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
